[package]
name = "kfs"
version = "0.1.0"
edition = "2021"
authors = ["hboissel <hboissel@student.42.fr>"]

[lib]
crate-type = ["staticlib"]
test = false
bench = false

[dependencies]
volatile = "0.2.6"
spin = "0.5.2"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
